Fixed style and naming issues